Fix blurred map on phones (#637)
* Setup image rendering

* Render different size for phones and for computer

* Switch size for larger devices

--- a/styles/index.css
+++ b/styles/index.css
@@ -113,10 +113,6 @@
   user-select: none; /* Standard syntax */
 }
 
-#map {
-  image-rendering: crisp-edges;
-}
-
 /* Write you own custom component styles here */
 
 /* Start purging... */
